# f128

./: Cargo.toml  README.md  build.rs
f128_input/: Cargo.toml
f128_input/src/: lib.rs
f128_internal/: Cargo.toml  build.rs
f128_internal/src/: f128.c  f128_derive.rs  f128_impl.rs  f128_t.rs  f80.c  ffi.rs  lib.rs
src/: f128.c  f128_derive.rs  f128_t.rs  f80.c  ffi.rs  lib.rs
