[package]
name = "f128"
version = "0.2.3"
authors = ["Joshua Karns <jkarns275@gmail.com>"]
license = "MIT"
description = "Bindings to the gcc quadmath library"
repository = "https://github.com/jkarns275/f128"

[dependencies]
num-traits = "0.2.6"
libc = "0.2"
f128_internal = { path = "f128_internal", version = "0.1.0" }
f128_input = { path = "f128_input", version = "0.1.0" }
