[package]
name = "f128_input"
version = "0.2.1"
authors = ["Joshua Karns <jkarns275@gmail.com>"]
license = "MIT"
description = "Bindings to the gcc quadmath library"
repository = "https://github.com/jkarns275/f128"


[lib]
proc-macro = true

[dependencies]
f128_internal = { path = "../f128_internal", version = "0.2.1" }
